[gd_scene load_steps=4 format=1]

[ext_resource path="res://NPC.gd" type="Script" id=1]
[ext_resource path="res://assets/NPC1.fw.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 22.8421

[node name="npc" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 1 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/rot = -90.0
transform/scale = Vector2( 0.763281, 0.763281 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="talkButton" type="Button" parent="."]

visibility/visible = false
visibility/self_opacity = 0.8
visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -0.46875
margin/top = -0.359375
margin/right = 0.484375
margin/bottom = -0.046875
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Talk"
flat = false

[node name="textPanel" type="Panel" parent="talkButton"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.21311
margin/top = -2.3
margin/right = 2.0
margin/bottom = -1.1

[node name="text" type="Label" parent="talkButton"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.37705
margin/top = -1.8
margin/right = 2.0
margin/bottom = -1.1
text = "Hello!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="attackButton" type="Button" parent="talkButton"]

visibility/opacity = 0.8
visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1.4
margin/right = 0.95082
margin/bottom = 2.4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attack"
flat = false

[connection signal="pressed" from="talkButton" to="." method="_on_talkButton_pressed"]

[connection signal="pressed" from="talkButton/attackButton" to="." method="_on_attackButton_pressed"]


